5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_1801.log
== TEST (2019-04-10 02:25:11) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + nome_do_objeto")
print(frase*repeticoes)
-- OUTPUT:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:25:33) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + nome_do_objeto")
print(frase*repeticoes)
-- EXECUTION TIME:
0.272688
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra + nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:26:08) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + objeto+")
print(frase*repeticoes)
-- OUTPUT:
Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:26:25) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + objeto+")
print(frase*repeticoes)
-- OUTPUT:
Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:26:32) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + objeto+"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra + objeto+"")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:26:50) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + objeto+")
print(frase*repeticoes)
-- OUTPUT:
Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:27:06) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + objeto+")
print(frase*repeticoes)
-- EXECUTION TIME:
0.141561
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+Abra + objeto+
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra + objeto+Abra + objeto+
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra + objeto+
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:27:25) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + objeto+")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + objeto+")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:27:37) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + "objeto+")
print(frase*repeticoes)
-- OUTPUT:
Abraobjeto+Abraobjeto+Abraobjeto+Abraobjeto+Abraobjeto+Abraobjeto+Abraobjeto+Abraobjeto+
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:28:01) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + objeto+"")
print(frase*repeticoes)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:28:15) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + objeto+"")
print(frase*repeticoes)
-- EXECUTION TIME:
0.207216
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:29:55) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + nome_do_objeto")
print(frase*repeticoes)
-- OUTPUT:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:30:10) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra + nome_do_objeto")
print(frase*repeticoes)
-- EXECUTION TIME:
0.136414
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra + nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:30:35) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + nome_do_objeto")
                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:30:44) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + nome_do_objeto"")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:30:54) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto)
print(frase*repeticoes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frase=("Abra" + nome_do_objeto)
NameError: name 'nome_do_objeto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:31:36) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto":")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + nome_do_objeto":")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:31:49) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto:")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + nome_do_objeto:")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:32:00) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" + nome_do_objeto:"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" + nome_do_objeto:"")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:32:41) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+" ")
print(frase*repeticoes)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:32:54) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+" ")
print(frase*repeticoes)
-- EXECUTION TIME:
0.201842
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:33:04) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+_" ")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" +  objeto+_" ")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:33:14) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+_"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" +  objeto+_"")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:33:27) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+"_")
print(frase*repeticoes)
-- OUTPUT:
Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:33:41) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+"_")
print(frase*repeticoes)
-- EXECUTION TIME:
0.163406
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_Abralivro_
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro_Abracarro_
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa_
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:33:48) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+""_)
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" +  objeto+""_)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:33:59) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra" +  objeto+"":)
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra" +  objeto+"":)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:34:27) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra"_ +  objeto+"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra"_ +  objeto+"")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:34:36) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra_ +  objeto+"")
print(frase*repeticoes)
-- ERROR:
File "XXXX", line 3
    frase=("Abra_ +  objeto+"")
                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:34:45) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra_" +  objeto+"")
print(frase*repeticoes)
-- OUTPUT:
Abra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:34:58) 
-- CODE:
objeto=input("nome do objeto:")
repeticoes=int(input("numero de repeticoes:"))
frase=("Abra_" +  objeto+"")
print(frase*repeticoes)
-- EXECUTION TIME:
0.16349
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livroAbra_livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra_carroAbra_carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra_caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:35:20) 
-- CODE:
objeto = input("Nome do Objeto:")
repeticoes = int(input("Numero de repeticoes:"))
frase = ("Abra " + objeto+" ")
print(frase*repeticoes)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:35:34) 
-- CODE:
objeto = input("Nome do Objeto:")
repeticoes = int(input("Numero de repeticoes:"))
frase = ("Abra " + objeto+" ")
print(frase*repeticoes)

-- EXECUTION TIME:
0.211799
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
